OpenLDAP 2.3 Change Log

OpenLDAP 2.3.21 Engineering
	Removed lint
	Fixed libldap referral chasing issue (ITS#4448)
	Fixed libldap invalid free bug (ITS#4436)
	Fixed libldap mutex leak (ITS#4441)
	Fixed libldap_r thr_yield(2) return handling (ITS#4469)
	Fixed slapd syncprov/glue interaction issue (ITS#4323, ITS#4417)
	Fixed slapd operational attrs in presence of global overlays (ITS#4431)
	Fixed slapd connection cleanup (ITS#4465)
	Fixed slapd "threads" config value checking (ITS#4433)
	Fixed slapd-ldap potential bind deadlock (ITS#4409)
	Fixed slapd-ldap/meta conn expiration concurrency (ITS#4429)
	Fixed slapd-ldap failed bind connection trashing (ITS#4428)
	Fixed slapd-ldap/meta chase-referrals disabling (ITS#4447)
	Fixed slapd-ldap controls forwarding (ITS#4457)
	Fixed slapd-ldap pretty DN in proxied requests (ITS#4456)
	Fixed slapd-ldbm crash on modify bug (ITS#4464)
	Fixed slapd-meta write error mapping (ITS#4419)
	Build Environment
		Fixed multi-precision sizeof detection (ITS#4416)
		Updated libtool to version 1.5.22 (ITS#4471)
		Updated shtool to version 2.0.5

OpenLDAP 2.3.20 Release
	Added libldap SASL workaround for broken LDAP servers (ITS#4391)
	Fixed libldap/slapd valuesReturnFilter OID (ITS#4404)
	Fixed slapd config_generic_wrapper missing parameter bug (ITS#4376)
	Fixed slapd extensible filter value normalization bug (ITS#4380)
	Fixed slapd context CSN not updating issue (ITS#4384)
	Fixed slapd non-read/write epoll event handling (ITS#4395)
	Fixed slapd syncrepl de-normalize UUID issue
	Fixed slapd syncrepl dynamic reconfig issue (ITS#4401)
	Added slapd syncrepl log messages (ITS#4369)
	Added slapd permissive modify/increment support
	Added slapd dynamically registered debug level support
	Fixed slapd connectionless LDAP support
	Fixed slapd cn=config error on create failure issue (ITS#4407)
	Fixed slapd-bdb/hdb wake listener on runqueue submit (ITS#4385)
	Fixed slapd-ldap/meta resources leaks on multiple binds (ITS#4387)