@@ -8,8 +8,9 @@ OpenLDAP 2.3.21 Engineering
 	Fixed libldap_r thr_yield(2) return handling (ITS#4469)
 	Fixed slapd syncprov/glue interaction issue (ITS#4323, ITS#4417)
 	Fixed slapd operational attrs in presence of global overlays (ITS#4431)
-	Fixed slapd connection cleanup (ITS#4465)
 	Fixed slapd "threads" config value checking (ITS#4433)
+	Fixed slapd connection cleanup (ITS#4465)
+	Fixed slapd-ldbm crash on modify bug (ITS#4464)
 	Fixed slapd-ldap potential bind deadlock (ITS#4409)
 	Fixed slapd-ldap/meta conn expiration concurrency (ITS#4429)
 	Fixed slapd-ldap failed bind connection trashing (ITS#4428)
@@ -19,6 +20,7 @@ OpenLDAP 2.3.21 Engineering
 	Fixed slapd-ldbm crash on modify bug (ITS#4464)
 	Fixed slapd-meta write error mapping (ITS#4419)
 	Build Environment
+		Added slapo-auditlog build support (ITS#4372)
 		Fixed multi-precision sizeof detection (ITS#4416)
 		Updated libtool to version 1.5.22 (ITS#4471)
 		Updated shtool to version 2.0.5
